fixed minor text alignment issue

--- a/css/style.css
+++ b/css/style.css
@@ -1219,6 +1219,10 @@ section {
     align-items: center;
   }
 
+  .md\:justify-start {
+    justify-content: flex-start;
+  }
+
   .md\:justify-end {
     justify-content: flex-end;
   }
